--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -19,7 +19,7 @@
 
         <!-- User filter -->
         <div class="form-group">
-            <input type="text" class="form-control" id="filterByUser" placeholder="Фильтр по тегу">
+            <input type="text" class="form-control" id="filterByTag" placeholder="Фильтр по тегу">
         </div>
 
         <!-- Category menu -->
