--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -16,8 +16,8 @@
             </div>
             <div class="d-flex justify-content-between mb-3 align-items-center">
                 <h3 class="m-0" style="font-weight: 400">
-                    <span>2</span>
-                    <span>вопроса</span></h3>
+                    <span>Всего вопросов: </span>
+                    <span id="questions-number"></span></h3>
                 <div class="form-group m-0">
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <label class="btn btn-secondary active">
