--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -40,7 +40,7 @@
                                     data-placement="right" title="Полезный вопрос">
                                 <svg aria-hidden="true" class="svg-icon iconArrowUpLg" width="36" height="36"
                                      viewBox="0 0 36 36">
-                                    <path d="M2 25h32L18 9 2 25Z"></path>
+                                    <path d="M2 25h32L18 9 2 25Z" id="voteUpFigure"></path>
                                 </svg>
                             </button>
 
@@ -50,17 +50,16 @@
                                     data-placement="right" title="Бесполезный вопрос">
                                 <svg aria-hidden="true" class="svg-icon iconArrowDownLg" width="36" height="36"
                                      viewBox="0 0 36 36">
-                                    <path d="M2 11h32L18 27 2 11Z"></path>
+                                    <path d="M2 11h32L18 27 2 11Z" id="voteDownFigure"></path>
                                 </svg>
                             </button>
 
-                            <button id="bookmark" class="p-0 btn btn_link_custom" data-toggle="tooltip"
+                            <button id="bookmark" class="p-0 btn btn_link_custom mb-2" data-toggle="tooltip"
                                     data-placement="right" title="Добавить вопрос в закладки">
-                                <svg aria-hidden="true" class="svg-icon iconBookmark" width="18" height="18"
+                                <svg aria-hidden="true" class="svg-icon iconBookmark filter-green" width="18" height="18"
                                      viewBox="0 0 18 18">
-                                    <path d="M6 1a2 2 0 0 0-2 2v14l5-4 5 4V3a2 2 0 0 0-2-2H6Zm3.9 3.83h2.9l-2.35 1.7.9 2.77L9 7.59l-2.35 1.7.9-2.76-2.35-1.7h2.9L9 2.06l.9 2.77Z"></path>
+                                    <path d="M6 1a2 2 0 0 0-2 2v14l5-4 5 4V3a2 2 0 0 0-2-2H6Zm3.9 3.83h2.9l-2.35 1.7.9 2.77L9 7.59l-2.35 1.7.9-2.76-2.35-1.7h2.9L9 2.06l.9 2.77Z" id="bookmarkFigure"></path>
                                 </svg>
-                                <div id="bookmarkCount" class="mt4">0</div>
                             </button>
 
                             <a id="postUpdates" class="d-flex justify-content-center" href="#" data-toggle="tooltip"
@@ -91,16 +90,6 @@
                                     <a type="button" style="color: #6a737c;">Следить</a>
                                 </div>
                                 <div class="d-flex flex-row">
-                                    <div class="userCard">
-                                        <div class="container">
-                                            <div class="d-flex flex-column flex-wrap">
-                                                <div id="userCard0" class="row">
-                                                    <span>карточка пользователя</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
                                     <div class="mainUserCard">
                                         <div class="container">
                                             <div class="d-flex flex-column">
