--- a/src/main/resources/templates/stomp-broadcast.html
+++ b/src/main/resources/templates/stomp-broadcast.html
@@ -73,6 +73,7 @@
 
 
 <script type="text/javascript">
+let data = null
     let stompClient = null;
    let userSender = $("#from").val();
    let chatId = null;
