--- a/src/main/resources/templates/stomp-broadcast.html
+++ b/src/main/resources/templates/stomp-broadcast.html
@@ -75,7 +75,7 @@
 <script type="text/javascript">
 let data = null
     let stompClient = null;
-   let userSender = $("#from").val();
+   let userSenderFront = $("#from").val();
 
 
     function setConnected(connected) {
@@ -90,8 +90,8 @@ let data = null
     }
 
     function connect() {
-        userSender = $("#from").val();
-        if (userSender == null || userSender === "") {
+        userSenderFront = $("#from").val();
+        if (userSenderFront == null || userSenderFront === "") {
             alert('Please input a nickname!');
             return;
         }
@@ -105,7 +105,7 @@ let data = null
 
             });
 
-            sendConnection(' connected to server');
+            sendConnection(  userSenderFront+ ' connected to server');
             setConnected(true);
         }, function (err) {
             alert('error' + err);
@@ -114,8 +114,8 @@ let data = null
 
     function disconnect() {
         if (stompClient != null) {
-            sendConnection(' disconnected from server');
-            showBroadcastMessage( '<div class="alert alert-warning">  Disconnected from server</div>')
+            sendConnection( userSenderFront + ' disconnected from server');
+            showBroadcastMessage(  '<div class="alert alert-warning">  Disconnected from server</div>')
 
 
             stompClient.disconnect(function () {
@@ -126,8 +126,8 @@ let data = null
     }
 
     function sendConnection(message) {
-        const text = userSender + message;
-        sendBroadcast({'from': 'server', 'text': text});
+        const text =   message;
+        sendBroadcast({'from': 'server', 'message': text, userSenderFront});
     }
 
     function sendBroadcast(json) {
@@ -136,8 +136,7 @@ let data = null
 
     function send() {
         const text = $("#message").val();
-        //persist (fetch?)
-        sendBroadcast({'from': userSender, 'message': text});
+        sendBroadcast({'from': userSenderFront, 'message': text});
         $("#message").val("");
     }
 
@@ -145,9 +144,9 @@ let data = null
         return '<div class="row alert alert-info"><div class="col-md-8">' +
             messageObj.message +
             '</div><div class="col-md-4 text-right"><small>[<b>' +
-            messageObj.message +
+            userSenderFront+
             '</b> ' +
-            messageObj.message +
+            messageObj.persistDate.replace("T", " в ").slice(0,-7) +
             ']</small>' +
             '</div></div>';
     }
