все тот же сокет

--- a/src/main/resources/templates/accessDenied.html
+++ b/src/main/resources/templates/accessDenied.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <div id="main">
-    <h1>ДОСТУП ЗАПРЕЩЕН<h1/>
+    <h1>ДОСТУП ЗАПРЕЩЕН</h1>
+
 </div>
+
 <script type="text/javascript" src="/js/initScriptAuthorized.js"></script>
 </body>
 </html>
